tests/compile-fail/integration_suite__integration__ecl_features__olde_unsupported_return_type.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: return types are not supported in old-style ECL subs like 'bouba'
  ┌─ <input>:7:1
  │
7 │ int bouba() {
  │ ^^^ unsupported return type


